--- a/web-automation-framework/pom.xml
+++ b/web-automation-framework/pom.xml
@@ -124,7 +124,12 @@
 			<artifactId>ngwebdriver</artifactId>
 			<version>1.1.3</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>7.0.0</version>
+		</dependency>
 
 	</dependencies>
 	<build>
